align issue fixed

--- a/src/assets/admin/template/settings.scss
+++ b/src/assets/admin/template/settings.scss
@@ -99,6 +99,9 @@
 				} 
 				.tfhb-integrations-single-block-btn {
 					margin-top: 32px;
+					svg{
+						margin-top: 2px;
+					}
 				}
 			} 
 		}
